<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">物理吸附仪手机APP</string>

    <string name="action_settings">设置</string>
    <string name="control">气路控制</string>

    <string name="connect">连接</string>
    <string name="disconnect">断开</string>

    <string name="login">连接</string>
    <string name="cancle">取消</string>

    <string name="base_info">样品基本信息</string>
    <string name="anaType">分析类型:</string>
    <string name="spName">名称:</string>
    <string name="spWeight">重量:</string>
    <string name="spDryTemp">烘干温度:</string>
    <string name="spDryTime">烘干时长:</string>
    <string name="spPerson">检测员:</string>
    <string name="spSource">来源:</string>

    <string name="analyse_progress_step1">真空校准</string>
    <string name="analyse_progress_step2">测量死体积</string>
    <string name="analyse_progress_step3">测定样品-解析</string>
    <string name="analyse_progress_step4">结束分析</string>
    <string name="analyse_progress_arrow">==></string>


    <string name="ready">未开始</string>
    <string name="teminate_confirm_ask">正在分析样品，您真的要终止分析吗？</string>
    <string name="btn_teminate_analyse">停止分析</string>
    <string name="btn_teminated_analyse">未开始分析</string>


    <string name="base_ip">192.168.0.5</string>
    <!-- Strings related to login -->
    <string name="prompt_deveice_type">仪器型号: </string>
    <string name="prompt_ip">设备 IP: </string>
    <string name="prompt_password">登录密码: </string>
    <string name="action_sign_in">连接</string>
    <string name="error_invalid_ip">IP格式错误</string>
    <string name="error_incorrect_ip">IP地址错误</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">必须填写</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="default_error_message">系统发生未知异常，请尝试重新登录或升级程序!</string>

</resources>
