<?xml version="1.0" encoding="utf-8"?>
<com.liuyongmei.kubo.view.PortDetailProgressView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/port_detail_progress"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 各种进度条-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_height"
        android:layout_gravity="center_vertical"
        android:padding="5dp">

        <ProgressBar
            android:id="@+id/analyse_progress_step1"
            style="@style/mProgress_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:progress="0"
            android:progressDrawable="@drawable/progressbar_horizonal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/analyse_progress_step1"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/analyse_progress_arrow"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/analyse_progress_step1_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ready"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_height"
        android:layout_gravity="center_vertical"
        android:padding="5dp">

        <ProgressBar
            android:id="@+id/analyse_progress_step2"
            style="@style/mProgress_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:progress="0"
            android:progressDrawable="@drawable/progressbar_horizonal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/analyse_progress_step2"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/analyse_progress_arrow"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/analyse_progress_step2_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ready"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_height"
        android:layout_gravity="center_vertical"
        android:padding="5dp">

        <ProgressBar
            android:id="@+id/analyse_progress_step3"
            style="@style/mProgress_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:progress="0"
            android:progressDrawable="@drawable/progressbar_horizonal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/analyse_progress_step3"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/analyse_progress_arrow"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/analyse_progress_step3_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ready"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_height"
        android:padding="5dp">

        <ProgressBar
            android:id="@+id/analyse_progress_step4"
            style="@style/mProgress_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:progress="0"
            android:progressDrawable="@drawable/progressbar_horizonal" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/analyse_progress_step4"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/analyse_progress_arrow"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/analyse_progress_step4_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ready"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>
    </RelativeLayout>


    <Button
        android:id="@+id/teminateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/btn_selector"
        android:text="@string/btn_teminate_analyse"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_b" />
</com.liuyongmei.kubo.view.PortDetailProgressView>